force-app/main/default/objects/fields/Geocoding_Status__c.field-meta.xml
<CustomField>
    <fullName>Geocoding_Status__c</fullName>
    <label>Geocoding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>